fix:调整z-index值为10

--- a/alinesno-infra-smart-im-ui/src/assets/styles/acp-cloud.scss
+++ b/alinesno-infra-smart-im-ui/src/assets/styles/acp-cloud.scss
@@ -13,7 +13,7 @@ $chartColor: #3b5998;
   top: 0px;
   right: 0px;
   left: 0px;
-  z-index: 1000;
+  z-index: 10;
   border-bottom: 1px solid rgb(229, 229, 229);
   // box-shadow: 0 2px 4px 0 var(--cb-color-shadow,rgba(0,0,0,0.16));
 
